<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/action_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="8dp"
    android:paddingVertical="4dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_vertical"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/save"
        android:textColor="?attr/colorOnPrimary" />

    <ImageButton
        android:id="@+id/undo_button"
        style="@style/MarkupToolbarButton"
        android:layout_width="@dimen/ink_lite_toolbar_button_size"
        android:layout_height="@dimen/ink_lite_toolbar_button_size"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toStartOf="@id/redo_button"
        android:background="@drawable/action_button_background"
        android:contentDescription="@string/ink_undo"
        android:src="@drawable/ic_undo"
        android:tint="?attr/colorOnSurface"
        android:tooltipText="@string/ink_undo" />

    <ImageButton
        android:id="@+id/redo_button"
        style="@style/MarkupToolbarButton"
        android:layout_width="@dimen/ink_lite_toolbar_button_size"
        android:layout_height="@dimen/ink_lite_toolbar_button_size"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toStartOf="@id/rotate_button"
        android:background="@drawable/action_button_background"
        android:contentDescription="@string/ink_redo"
        android:src="@drawable/ic_redo"
        android:tint="?attr/colorOnSurface"
        android:tooltipText="@string/ink_redo" />

    <ImageButton
        android:id="@+id/rotate_button"
        style="@style/MarkupToolbarButton"
        android:layout_width="@dimen/ink_lite_toolbar_button_size"
        android:layout_height="@dimen/ink_lite_toolbar_button_size"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toStartOf="@id/delete"
        android:background="@drawable/action_button_background"
        android:contentDescription="@string/rotate"
        android:src="@drawable/ic_rotate"
        android:tint="?attr/colorOnSurface"
        android:tooltipText="@string/rotate" />

    <ImageButton
        android:id="@+id/delete"
        style="@style/MarkupToolbarButton"
        android:layout_width="@dimen/ink_lite_toolbar_button_size"
        android:layout_height="@dimen/ink_lite_toolbar_button_size"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toStartOf="@id/share"
        android:background="@drawable/action_button_background"
        android:contentDescription="@string/delete"
        android:padding="12dp"
        android:src="@drawable/ic_delete"
        android:tint="?attr/colorOnSurface"
        android:tooltipText="@string/delete" />

    <ImageButton
        android:id="@+id/share"
        style="@style/MarkupToolbarButton"
        android:layout_width="@dimen/ink_lite_toolbar_button_size"
        android:layout_height="@dimen/ink_lite_toolbar_button_size"
        android:layout_alignParentEnd="true"
        android:background="@drawable/action_button_background"
        android:contentDescription="@string/share"
        android:padding="12dp"
        android:src="@drawable/ic_share"
        android:tint="?attr/colorOnSurface"
        android:tooltipText="@string/share" />
</RelativeLayout>
